--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-loader *ngIf=isLoading></app-loader>
+<app-loader  [hidden]="!isLoading"></app-loader>
+<app-header></app-header>
 <router-outlet></router-outlet>
